--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@ title: Qixiao's Homepage
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Hank Quinlan!</h1>
-	I am a postdoc at Shanghai Center for Mathematical Sciences.  
-	My research interest is algebraic geometry. 
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>I am a postdoc at Shanghai Center for Mathematical Sciences.</p>  
+	<p>My research interest is algebraic geometry. </p>
 </div><!-- /.blurb -->
