--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Qixiao's Homepage
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
+	<h1>Qixiao Ma</h1>
 	<p>I am a postdoc at Shanghai Center for Mathematical Sciences.</p>  
 	<p>My research interest is algebraic geometry. </p>
 </div><!-- /.blurb -->
