--- a/index.htm
+++ b/index.htm
@@ -7,16 +7,17 @@
 <style type="text/css">
 <!--
 .style1 {font-size: 18px}
-.style2 {font-size: 18}
+.style4 {font-size: 14px}
 -->
 </style>
 </head>
 <body>
 <p align="left" class="style1">Qixiao Ma's Homepage </p>
-<p>&nbsp;</p>
-<p>I am a postdoc at Shanghai Center for Mathematical Sciences.</p>
-<p>My research interest is Algebraic Geometry. </p>
-<p>&nbsp;</p>
-<p>[cv] [<a href="research.htm">research</a>] [<a href="teaching.htm">teaching</a>] [<a href="notes.htm">notes</a>] [<a href="useful.htm">useful links</a>]  [<a href="misc.htm">miscellaneous</a>] </p>
+<p align="left" class="style1">&nbsp;</p>
+<p align="left" class="style1"><img src="/qxma10.github.io/Qixiao.jpeg" width="89" height="129" hspace="50" align="right"><span class="style4">I am a postdoc at Shanghai Center for Mathematical Sciences.</span></p>
+<p class="style4">My research interest is Algebraic Geometry.</p>
+<p>Office: Room 315</p>
+<p>Email: qxma10@fudan.edu.cn</p>
+<p>[cv] [<a href="research.htm">research</a>] [<a href="teaching.htm">teaching</a>] [<a href="notes.htm">notes</a>] [<a href="useful.htm">links</a>] </p>
 </body>
 </html>
