--- a/index.htm
+++ b/index.htm
@@ -7,17 +7,19 @@
 <style type="text/css">
 <!--
 .style1 {font-size: 18px}
-.style4 {font-size: 14px}
+.style6 {font-size: 14px}
+.style7 {color: #000000}
+.style8 {font-size: 14px; color: #000000; }
 -->
 </style>
 </head>
 <body>
 <p align="left" class="style1">Qixiao Ma's Homepage </p>
 <p align="left" class="style1">&nbsp;</p>
-<p align="left" class="style1"><img src="/qxma10.github.io/Qixiao.jpeg" width="89" height="129" hspace="50" align="right"><span class="style4">I am a postdoc at Shanghai Center for Mathematical Sciences.</span></p>
-<p class="style4">My research interest is Algebraic Geometry.</p>
-<p>Office: Room 315</p>
-<p>Email: qxma10@fudan.edu.cn</p>
-<p>[cv] [<a href="research.htm">research</a>] [<a href="teaching.htm">teaching</a>] [<a href="notes.htm">notes</a>] [<a href="useful.htm">links</a>] </p>
+<p align="left" class="style1"><img src="/qxma10.github.io/Qixiao.jpeg" width="89" height="129" hspace="50" align="right"><span class="style6">I am a postdoc at Shanghai Center for Mathematical Sciences.</span></p>
+<p class="style6 style7">My research interest is Algebraic Geometry.</p>
+<p class="style8">Office: Room 315</p>
+<p class="style8">Email: qxma10@fudan.edu.cn</p>
+<p class="style8">[cv] [<a href="research.htm">research</a>] [<a href="teaching.htm">teaching</a>] [<a href="notes.htm">notes</a>] [<a href="useful.htm">links</a>] </p>
 </body>
 </html>
