--- a/index.htm
+++ b/index.htm
@@ -8,18 +8,21 @@
 <!--
 .style1 {font-size: 18px}
 .style6 {font-size: 14px}
-.style7 {color: #000000}
-.style8 {font-size: 14px; color: #000000; }
+.style7 {
+	color: #000000;
+	font-size: 16px;
+}
+.style9 {font-size: 16px}
 -->
 </style>
 </head>
 <body>
-<p align="left" class="style1">Qixiao Ma's Homepage </p>
+<p align="left" class="style1"><strong>Qixiao Ma's Homepage </strong></p>
 <p align="left" class="style1">&nbsp;</p>
-<p align="left" class="style1"><img src="/qxma10.github.io/Qixiao.jpeg" width="89" height="129" hspace="50" align="right"><span class="style6">I am a postdoc at Shanghai Center for Mathematical Sciences.</span></p>
+<p align="left" class="style9"><img src="/qxma10.github.io/Qixiao.jpeg" width="89" height="129" hspace="50" align="right">I am a postdoc at Shanghai Center for Mathematical Sciences.</p>
 <p class="style6 style7">My research interest is Algebraic Geometry.</p>
-<p class="style8">Office: Room 315</p>
-<p class="style8">Email: qxma10@fudan.edu.cn</p>
-<p class="style8">[cv] [<a href="research.htm">research</a>] [<a href="teaching.htm">teaching</a>] [<a href="notes.htm">notes</a>] [<a href="useful.htm">links</a>] </p>
+<p class="style7">Office: Room 315</p>
+<p class="style7">Email: qxma10@fudan.edu.cn</p>
+<p class="style7">[cv] [<a href="research.htm">research</a>] [<a href="teaching.htm">teaching</a>] [<a href="notes.htm">notes</a>] [<a href="useful.htm">links</a>] </p>
 </body>
 </html>
