--- a/research.htm
+++ b/research.htm
@@ -4,17 +4,26 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
 <title>research</title>
+<style type="text/css">
+<!--
+.style1 {
+	font-size: 18px;
+	font-weight: bold;
+}
+.style2 {font-size: 16px}
+-->
+</style>
 </head>
 
 <body>
-<p><strong>Research</strong></p>
-<p>Ongoing</p>
-<p>[4] Weil-Chatelet group of Picard schemes.</p>
-<p>Prerints</p>
-<p>[3] Conics associated with totally degenerate curves. [arXiv:1908.03170]</p>
-<p>[2] Closed points on cubic hypersurfaces. [arXiv:1908.03139]</p>
-<p>[1] Some properties of a Brauer class. [arXiv:1908.03131]</p>
-<p>Thesis</p>
-<p>[0] Brauer class over the Picard scheme of curves. [<a href="https://academiccommons.columbia.edu/doi/10.7916/d8-9zh4-q663">Columbia Academic Commons</a>]</p>
+<p class="style1">Research</p>
+<p class="style1">&nbsp;</p>
+<p class="style2">[*] Weil-Chatelet group of Picard schemes.</p>
+<p class="style2">Prerints</p>
+<p class="style2">[3] Conics associated with totally degenerate curves. [arXiv:1908.03170]</p>
+<p class="style2">[2] Closed points on cubic hypersurfaces. [arXiv:1908.03139]</p>
+<p class="style2">[1] Some properties of a Brauer class. [arXiv:1908.03131]</p>
+<p class="style2">Thesis</p>
+<p class="style2">[0] Brauer class over the Picard scheme of curves. [<a href="https://academiccommons.columbia.edu/doi/10.7916/d8-9zh4-q663">Columbia Academic Commons</a>]</p>
 </body>
 </html>
