--- a/teaching.htm
+++ b/teaching.htm
@@ -4,12 +4,22 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
 <title>teaching</title>
+<style type="text/css">
+<!--
+.style1 {
+	font-size: 18px;
+	font-weight: bold;
+}
+.style2 {font-size: 16px}
+-->
+</style>
 </head>
 
 <body>
-<p>Undergraduate:</p>
-<p>[2019 Fall] Reading seminar: Algebraic number theory.
-</p>
+<p class="style1">Teaching</p>
 <p>&nbsp;</p>
+<p class="style2">[2018 Fall] Reading seminar: Algebraic number theory.
+</p>
+<p>Schedule </p>
 </body>
 </html>
