--- a/useful.htm
+++ b/useful.htm
@@ -4,9 +4,18 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
 <title>useful links</title>
+<style type="text/css">
+<!--
+.style1 {
+	font-size: 18px;
+	font-weight: bold;
+}
+-->
+</style>
 </head>
 
 <body>
-Useful links
+<p class="style1"> Miscellaneous Links </p>
+<p class="style1">&nbsp;</p>
 </body>
 </html>
