changed title font

--- a/index.htm
+++ b/index.htm
@@ -13,11 +13,15 @@
 	font-size: 16px;
 }
 .style9 {font-size: 16px}
+.style10 {
+	font-size: 24px;
+	font-weight: bold;
+}
 -->
 </style>
 </head>
 <body>
-<p align="left" class="style1"><strong>Qixiao Ma's Homepage </strong></p>
+<p align="left" class="style10">Qixiao Ma's Homepage </p>
 <p align="left" class="style1">&nbsp;</p>
 <p align="left" class="style9"><img src="/qxma10.github.io/Qixiao.jpeg" width="89" height="129" hspace="50" align="right">I am a postdoc at Shanghai Center for Mathematical Sciences.</p>
 <p class="style6 style7">My research interest is Algebraic Geometry.</p>
