--- a/research.htm
+++ b/research.htm
@@ -11,12 +11,13 @@
 	font-weight: bold;
 }
 .style2 {font-size: 16px}
+.style3 {font-size: 24px}
 -->
 </style>
 </head>
 
 <body>
-<p class="style1">Research</p>
+<p class="style1 style3">Research</p>
 <p class="style1">&nbsp;</p>
 <p class="style2">[*] Weil-Chatelet group of Picard schemes.</p>
 <p class="style2">Prerints</p>
