--- a/useful.htm
+++ b/useful.htm
@@ -10,12 +10,13 @@
 	font-size: 18px;
 	font-weight: bold;
 }
+.style2 {font-size: 24px}
 -->
 </style>
 </head>
 
 <body>
-<p class="style1"> Miscellaneous Links </p>
+<p class="style1 style2"> Miscellaneous Links </p>
 <p class="style1">&nbsp;</p>
 </body>
 </html>
