--- a/notes.htm
+++ b/notes.htm
@@ -4,13 +4,25 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
 <title>notes</title>
+<style type="text/css">
+<!--
+.style1 {
+	font-size: 18px;
+	font-weight: bold;
+}
+.style2 {font-size: 16px}
+.style3 {font-size: 24px}
+-->
+</style>
 </head>
 
 <body>
- <p>Notes took from talks:</p>
- <p>[1] Workshop on algebraic geometry, 2019/7/30-8/2 at Fudan University.</p>
- <p>&nbsp;</p>
- <p>Notes written for myself:</p>
- <p>[1] Rigid Analytic Geometry</p>
+ <p class="style1 style3">Notes</p>
+ <p class="style1 style2">&nbsp;</p>
+ <p class="style2"> From others' talks:</p>
+ <p class="style2">[1] Workshop on algebraic geometry, 2019/7/30-8/2 at Fudan University.</p>
+ <p class="style2">&nbsp;</p>
+ <p class="style2">Written for myself:</p>
+ <p class="style2">[1] Rigid Analytic Geometry</p>
 </body>
 </html>
