--- a/teaching.htm
+++ b/teaching.htm
@@ -7,10 +7,10 @@
 <style type="text/css">
 <!--
 .style1 {
-	font-size: 24px;
+	font-size: 18px;
 	font-weight: bold;
 }
-.style2 {font-size: 16px}
+.style2 {font-size: 14px}
 -->
 </style>
 </head>
@@ -20,6 +20,6 @@
 <p>&nbsp;</p>
 <p class="style2">[2018 Fall] Reading seminar: Algebraic number theory.
 </p>
-<p>Schedule </p>
+<p class="style2">Schedule </p>
 </body>
 </html>
