--- a/teaching.htm
+++ b/teaching.htm
@@ -11,6 +11,10 @@
 	font-weight: bold;
 }
 .style2 {font-size: 14px}
+.style3 {font-size: 9px}
+.sbiao {
+	vertical-align: super;
+}
 -->
 </style>
 </head>
@@ -18,8 +22,10 @@
 <body>
 <p class="style1">Teaching</p>
 <p>&nbsp;</p>
-<p class="style2">[2018 Fall] Reading seminar: Algebraic number theory.
-</p>
-<p class="style2">Schedule </p>
+<p class="style2"> Reading seminar: Algebraic number theory. [<a href="/qxma10.github.io/%5BMenu%5D.pdf">Menu</a>]</p>
+<p class="style2">&nbsp; </p>
+<p class="style2">References: </p>
+<p class="style2"> [Cox] Primes of the form x<sup>2</sup>+ny<sup>2</sup>. </p>
+<p class="style2">[Milne],[Samuel],[Neukirch],[Lang] (,[Cassels-Frolich]): Algebraic Number theory.</p>
 </body>
 </html>
