--- a/teaching.htm
+++ b/teaching.htm
@@ -22,7 +22,7 @@
 <body>
 <p class="style1">Teaching</p>
 <p>&nbsp;</p>
-<p class="style2"> Reading seminar: Algebraic number theory. [<a href="/qxma10.github.io/%5BMenu%5D.pdf">Menu</a>]</p>
+<p class="style2"> Reading seminar: Algebraic number theory. [<a href="/qxma10.github.io/%5BMenu%5D.pdf">Schedule to be added</a>]</p>
 <p class="style2">&nbsp; </p>
 <p class="style2">References: </p>
 <p class="style2"> [Cox] Primes of the form x<sup>2</sup>+ny<sup>2</sup>. </p>
