--- a/research.htm
+++ b/research.htm
@@ -24,7 +24,6 @@
 <p class="style2">[3] Conics associated with totally degenerate curves. [arXiv:1908.03170]</p>
 <p class="style2">[2] Closed points on cubic hypersurfaces. [arXiv:1908.03139]</p>
 <p class="style2">[1] Some properties of a Brauer class. [arXiv:1908.03131]</p>
-<p class="style2">Thesis</p>
-<p class="style2">[0] Brauer class over the Picard scheme of curves. [<a href="https://academiccommons.columbia.edu/doi/10.7916/d8-9zh4-q663">Columbia Academic Commons</a>]</p>
+<p class="style2">[1] Brauer class over the Picard scheme of totally degenerate stable curves. [arXiv:1911.04186]</p>
 </body>
 </html>
