--- a/index.htm
+++ b/index.htm
@@ -27,6 +27,6 @@
 <p class="style6 style7">My research interest is Algebraic Geometry.</p>
 <p class="style7">Office: Room 315 (Jiangwan campus)</p>
 <p class="style7">Email: qxma10@fudan.edu.cn</p>
-<p class="style7">[<a href="/qxma10.github.io/%5BCV%5D.pdf">cv</a>] [<a href="research.htm">research</a>] [<a href="teaching.htm">teaching</a>] [<a href="notes.htm">notes</a>] [<a href="useful.htm">links</a>] </p>
+<p class="style7"> [<a href="teaching.htm">teaching</a>] </p>
 </body>
 </html>
