--- a/teaching.htm
+++ b/teaching.htm
@@ -22,10 +22,9 @@
 <body>
 <p class="style1">Teaching</p>
 <p>&nbsp;</p>
-<p class="style2"> Reading seminar: Algebraic number theory. [<a href="/qxma10.github.io/%5BMenu%5D.pdf">Schedule to be added</a>]</p>
+<p class="style2"> I am a teaching assistant for MATH130068h.01，recitation classes will be held on Mondays 16:20-18:00 at H4208[<a href="/qxma10.github.io/%5BMenu%5D.pdf">Schedule to be added</a>]</p>
 <p class="style2">&nbsp; </p>
-<p class="style2">References: </p>
-<p class="style2"> [Cox] Primes of the form x<sup>2</sup>+ny<sup>2</sup>. </p>
-<p class="style2">[Milne],[Samuel],[Neukirch],[Lang] (,[Cassels-Frolich]): Algebraic Number theory.</p>
+	
+	
 </body>
 </html>
