--- a/teaching.htm
+++ b/teaching.htm
@@ -22,9 +22,8 @@
 <body>
 <p class="style1">Teaching</p>
 <p>&nbsp;</p>
-<p class="style2"> I am a teaching assistant for MATH130068h.01，recitation classes will be held on Mondays 16:20-18:00 at H4208[<a href="/qxma10.github.io/%5BMenu%5D.pdf">Schedule to be added</a>]</p>
+<p class="style2"> I am a teaching assistant for MATH130068h.01. Recitation classes will be held on Mondays 16:20-18:00 at H4208</p>
 <p class="style2">&nbsp; </p>
-	
-	
+
 </body>
 </html>
